added access functions for bm and ihc output singals

--- a/main.ipynb
+++ b/main.ipynb
@@ -245,8 +245,8 @@
    "source": [
     "# Filter each band using IHC lowpass and half wave rectification (IHC stage 2)\n",
     "sig_ihc = model.set_ihc()\n",
-    "model.ihc.add_halfwave()\n",
-    "model.ihc.add_lowpass(samplerate)\n",
+    "model.ihc['filter'].add_halfwave()\n",
+    "model.ihc['filter'].add_lowpass(samplerate)\n",
     "\n",
     "model.filter_ihc()\n",
     "\n"
@@ -254,52 +254,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6bff93e0",
+   "execution_count": 15,
+   "id": "e71e72b6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# for sig in sig_ihc:\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#     plt.plot(sig)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8\u001b[39m\n\u001b[1;32m----> 4\u001b[0m signal_ihc \u001b[38;5;241m=\u001b[39m \u001b[43msig_ihc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      6\u001b[0m signal_bm \u001b[38;5;241m=\u001b[39m [band[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msignal_bm\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m band \u001b[38;5;129;01min\u001b[39;00m model\u001b[38;5;241m.\u001b[39mbm[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbands\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues()]\n\u001b[0;32m      7\u001b[0m signal_bm \u001b[38;5;241m=\u001b[39m signal_bm[i]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'200.00519354149583': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       1.09469288e-06, 1.07292921e-06, 1.05034929e-06]), '325.9265109906737': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       2.23974130e-10, 1.94138187e-10, 5.44948218e-10]), '484.48242411908905': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       1.41229029e-09, 3.98639543e-09, 1.57896619e-08]), '685.0742169193891': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       3.12118012e-08, 2.70540285e-08, 2.34501191e-08]), '940.3654305619984': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       1.96970536e-07, 1.70731784e-07, 1.47988336e-07]), '1267.7514055033935': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       1.84520648e-06, 2.44515468e-06, 3.06716406e-06]), '1691.7092536092114': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       6.98469453e-07, 6.22648582e-07, 6.90543094e-07]), '2247.7183214901725': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+      "       7.54202745e-07, 1.02773596e-06, 1.50162008e-06]), '2989.137812408322': array([0.00000000e+00, 0.00000000e+00, 4.34935656e-12, ...,\n",
+      "       7.84154894e-07, 1.02536371e-06, 1.32842192e-06]), '4000.029475362893': array([0.00000000e+00, 0.00000000e+00, 6.49567158e-10, ...,\n",
+      "       1.87956441e-06, 1.98024203e-06, 2.79552205e-06])}\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "signals_bm = model.get_signals_bm()\n",
+    "signals_ihc = model.get_signals_ihc()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0055c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e7de0af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63d84063",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e978f922",
+   "id": "2e3889a5",
    "metadata": {},
    "outputs": [],
    "source": []
